2011-07-19  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:
	* README:	Advanced version number to 1.0b17.

	* configure: 	autoconf 2.59

2011-07-18  Don Porter  <dgp@users.sourceforge.net>

	* configure.in: Update to latest TEA 3.9 revisions.
	* Makefile.in:
	* tclconfig/*:

	* configure:    autoconf-2.59

2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcmysql.test:
		Added rudimentary test for 'nextresults' - the method
		is a dummy because the calls supported by tdbc::mysql
		do not allow for multiple result sets.

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_mysql.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.

2011-01-25  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c: Fixed a bug in data types of small integers
			       on 64-bit machines. Who would have imagined
			       that MSYQL_TYPE_LONG doesn't mean 'long' but
			       rather 'int'?
	* tests/tdbcmysql.test (tdbc::mysql-1.6,24.[4567]):
		Quieted test cases on 64-bit machines and on MySQL earlier
		than 5.1.16, which is the first version on which
		'foreignkeys' functions correctly.
	Thanks to Damon Courtney for reporting these bugs.

2010-12-28  Kevin B. Kenny  <kennykb@acm.org>

	* generic/fakemysql.h: Added the MYSQL data structure and the
			       nest of other definitions that it depends on.
	* generic/mysqlStubDefs.txt: Added mysql_affected_rows and
				     mysql_field_count.
	* generic/mysqlStubInit.c, generic/mysqlStubs.h: Regenerated.
	* generic/tdbcmysql.c: Added 'evaldirect' method that allows
			       executing statements that are unimplemented
			       in the MySQL prepared statement API.
	* generic/tdbcmysql.tcl: Did a rough (not really functional) hack
	                         at formatting prepared statements.
	* tests/tdbcmysql.test (tdbc::mysql-25.*): Added two tests for