@@ -3105,6 +3105,44 @@ test tdbc::sqlite3-30.6 {Empty result set among multiples} {
     -result {resultset resultset {idnum 3}}
 }
 
+test tdbc::sqlite3-30.7 {Multiple empty result sets} {
+    -setup {
+	::db allrows {delete from people}
+	set stmt [db prepare {
+	    INSERT INTO people(idnum, name, info) VALUES(:idnum, :name, NULL)
+	}]
+	$stmt paramtype idnum integer
+	$stmt paramtype name varchar 40
+	set idnum 1
+	foreach name {wilma pebbles betty bam-bam} {
+	    set rs [$stmt execute]
+	    rename $rs {}
+	    incr idnum
+	}
+	rename $stmt {}
+	set stmt [::db prepare {
+	    select idnum from people where name = 'fred';
+	    select idnum from people where name = 'barney';
+	}]
+	set rs [$stmt execute]
+    }
+    -body {
+	set result {}
+	while {1} {
+	    lappend result resultset
+	    while {[$rs nextdict row]} {
+		lappend result $row
+	    }
+	    if {[$rs nextresults] == 0} break
+	}
+	set result
+    }
+    -cleanup {
+	rename $rs {}
+    }
+    -result {resultset resultset}
+}
+
 #-------------------------------------------------------------------------------
 
 # Test cleanup. Drop tables and get rid of the test database.
